新增全量存储会话历史